fix: allow pinch zoom and make layout responsive on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,8 +13,8 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  /* max-width: 100vw; */
+  /* overflow-x: hidden; */
   background-color: var(--background);
   color: var(--foreground);
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
